rust/schema/tests/snapshots/merge__instruction-modify-text.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: InstructionBlock
      messages:
        - type: InstructionMessage
          parts:
            - type: Text
              value: more succinct
      content:
        - type: Paragraph
          content:
            - type: Text
              value: A rather long winded paragraph.
new:
  type: Article
  content:
    - type: InstructionBlock
      messages:
        - type: InstructionMessage
          parts:
            - type: Text
              value: more succinct
      content:
        - type: Paragraph
          content:
            - type: Text
              value: A rather long winded paragraph that goes on and on.
ops:
  - - - content
      - 0
      - content
      - 0
      - content
      - 0
      - value
    - Set: A rather long winded paragraph that goes on and on.
