rust/schema/tests/snapshots/merge__instruction-wrap.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: Some okay text.
    - type: Paragraph
      content:
        - type: Text
          value: A rather long winded paragraph.
    - type: Paragraph
      content:
        - type: Text
          value: A great conclusion.
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: Some okay text.
    - type: InstructionBlock
      messages:
        - type: InstructionMessage
          parts:
            - type: Text
              value: more succinct
      content:
        - type: Paragraph
          content:
            - type: Text
              value: A rather long winded paragraph.
    - type: Paragraph
      content:
        - type: Text
          value: A great conclusion.
ops:
  - - - content
    - Replace:
        - - 1
          - type: InstructionBlock
            messages:
              - type: InstructionMessage
                parts:
                  - type: Text
                    value: more succinct
            content:
              - type: Paragraph
                content:
                  - type: Text
                    value: A rather long winded paragraph.
