rust/schema/tests/snapshots/merge__move-middle-paragraphs.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Paragraph
      content:
        - type: Text
          value: para3
    - type: Paragraph
      content:
        - type: Text
          value: para4
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para3
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Paragraph
      content:
        - type: Text
          value: para4
ops:
  - - - content
      - 1
      - content
      - 0
      - value
    - Set: para3
  - - - content
      - 2
      - content
      - 0
      - value
    - Set: para2
