rust/schema/tests/snapshots/merge__prepend-one-paragraph.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para3
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
ops:
  - - - content
    - Insert:
        - - 0
          - type: Paragraph
            content:
              - type: Text
                value: para3
