rust/schema/tests/snapshots/merge__split-code-chunk.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: CodeChunk
      code: "1\n2\n3\n4"
      programmingLanguage: python
new:
  type: Article
  content:
    - type: CodeChunk
      code: "1\n2\n3"
      programmingLanguage: python
    - type: Paragraph
      content:
        - type: Text
          value: para
    - type: CodeChunk
      code: "4"
      programmingLanguage: python
ops:
  - - - content
    - Append:
        - type: Paragraph
          content:
            - type: Text
              value: para
        - type: CodeChunk
          code: "4"
          programmingLanguage: python
  - - - content
      - 0
      - code
    - Set: "1\n2\n3"
